--- a/index.html
+++ b/index.html
@@ -10,84 +10,164 @@
 </head>
 <body>
 
-  <!-- Header e Navegação -->
   <header>
     <nav class="navbar">
-      <a href="#top">Início</a>
-      <a href="#about">Sobre</a>
-      <a href="#skills">Habilidades</a>
-      <a href="#projects" id="mygamestext">Meu jogo</a>
+
+      <a href="#top" class="reveal">Início</a>
+      <a href="#about" class="reveal">Sobre</a>
+      <a href="#skills" class="reveal">Habilidades</a>
+      <a href="#formacao" class="reveal">Formação Acadêmica</a>
+      <a href="#goals" class="reveal">Objetivos</a>
+      <a href="#projects" id="mygamestext" class="reveal">Meu jogo</a>
     </nav>
   </header>
 
-  <!-- Seção Hero -->
-  <section id="top" class="hero">
-    <h1 class="title">Rafael Ângelo</h1>
-    <h2 class="subtitle">Desenvolvedor</h2>
-    <img id="logoimg" src="logo.png" alt="logo">
+  <section id="top" class="hero reveal">
+    <h1 class="title reveal">Rafael Ângelo</h1>
+    <h2 class="subtitle reveal">Desenvolvedor</h2>
+    <a href="#about" id="logo-link">
+      <img id="logoimg" src="logo.png" alt="logo" class="reveal">
+    </a>
   </section>
 
-  <!-- Seção Sobre -->
-  <section id="about" class="section about">
-    <h1 class="section-title">Sobre mim</h1>
+  <section id="about" class="section about reveal">
+    <h1 class="section-title reveal">Sobre mim</h1>
     <div class="about-content">
-      <div class="about-text">
+      <div class="about-text reveal-left">
         <p>
           Tive <span style="color:#00b7ff; font-weight:bold;">meu primeiro contato</span> com o universo da programação por meio da <span style="color:#00b7ff; font-weight:bold;">Unity 3D</span>. Nela, desenvolvi minhas primeiras ideias de jogos, exercitei minha <span style="color:#00b7ff; font-weight:bold;">criatividade</span> e aprendi <span style="color:#00b7ff; font-weight:bold;">lógica de programação</span> em <span style="color:#00b7ff; font-weight:bold;">C#</span>.
         </p>
       </div>
-      <div class="about-images">
+      <div class="about-images reveal-right">
         <a href="code1.png" target="_blank"><img src="code1.png" alt="Meu primeiro código" class="about-img"></a>
         <a href="code2.png" target="_blank"><img src="code2.png" alt="Meu segundo código" class="about-img"></a>
       </div>
     </div>
   </section>
 
-  <!-- Seção Habilidades -->
-  <section id="skills" class="section skills">
-    <h1 class="section-title">Minhas Habilidades</h1>
-    <div class="marquee">
+  <section id="skills" class="section skills reveal">
+    <h1 class="section-title reveal">Minhas Habilidades</h1>
+    <div class="marquee reveal">
       <div class="marquee-content">
-        <div class="icon-wrapper"><img src="html.png" alt="HTML" class="icon"><p>HTML e CSS</p></div>
-        <div class="icon-wrapper"><img src="py.png" alt="Python" class="icon"><p>Python</p></div>
-        <div class="icon-wrapper"><img src="c.png" alt="C#" class="icon"><p>C#</p></div>
-        <div class="icon-wrapper"><img src="js.png" alt="JavaScript" class="icon"><p>JavaScript</p></div>
-        <div class="icon-wrapper"><img src="unity.png" alt="Unity" class="icon"><p>Unity 3D</p></div>
+        <div class="icon-wrapper reveal-left"><img src="html.png" alt="HTML" class="icon"><p>HTML e CSS</p></div>
+        <div class="icon-wrapper reveal"><img src="py.png" alt="Python" class="icon"><p>Python</p></div>
+        <div class="icon-wrapper reveal"><img src="c.png" alt="C#" class="icon"><p>C#</p></div>
+        <div class="icon-wrapper reveal-right"><img src="js.png" alt="JavaScript" class="icon"><p>JavaScript</p></div>
+        <div class="icon-wrapper reveal"><img src="unity.png" alt="Unity" class="icon"><p>Unity 3D</p></div>
 
-        <!-- duplicação para loop contínuo -->
-        <div class="icon-wrapper"><img src="html.png" alt="HTML" class="icon"><p>HTML</p></div>
-        <div class="icon-wrapper"><img src="py.png" alt="Python" class="icon"><p>Python</p></div>
-        <div class="icon-wrapper"><img src="c.png" alt="C#" class="icon"><p>C#</p></div>
-        <div class="icon-wrapper"><img src="js.png" alt="JavaScript" class="icon"><p>JavaScript</p></div>
-        <div class="icon-wrapper"><img src="unity.png" alt="Unity" class="icon"><p>Unity 3D</p></div>
+        <div class="icon-wrapper reveal-left"><img src="html.png" alt="HTML" class="icon"><p>HTML</p></div>
+        <div class="icon-wrapper reveal"><img src="py.png" alt="Python" class="icon"><p>Python</p></div>
+        <div class="icon-wrapper reveal"><img src="c.png" alt="C#" class="icon"><p>C#</p></div>
+        <div class="icon-wrapper reveal-right"><img src="js.png" alt="JavaScript" class="icon"><p>JavaScript</p></div>
+        <div class="icon-wrapper reveal"><img src="unity.png" alt="Unity" class="icon"><p>Unity 3D</p></div>
       </div>
     </div>
-    <div class="center">
+    <div class="center reveal">
         <p class="center-text-p">
           Depois de um período desenvolvendo meus próprios jogos, percebi como me identificava com a área de <span style="color:#00b7ff; font-weight:bold;">tecnologia</span>. Por isso, decidi ampliar meus conhecimentos, aprendendo <span style="color:#00b7ff; font-weight:bold;">Python, HTML, CSS e JavaScript</span>, além de aperfeiçoar meu <span style="color:#00b7ff; font-weight:bold;">inglês</span>.
         </p>
     </div>
   </section>
 
-  <!-- Seção Projetos -->
-  <section id="projects" class="section projects">
-  <h1 class="section-title">Jogue meu Jogo</h1>
-  <div class="projects-grid">
-    <!-- Projeto 1 -->
-    <div class="project-card" data-aos="fade-up">
-      <img src="br01.png" alt="BattleRoyale">
-      <div class="project-info">
-        <h3>Battle Royale</h3>
-        <p>Criei um jogo de luta em que cada personagem possui características únicas e habilidades especiais, utilizando C# na Unity. A ideia surgiu em parceria com um amigo, que ficou responsável pela modelagem dos personagens. Este é um dos meus projetos mais completos, pois envolveu a combinação de habilidades de design de personagens, programação, além de integração de sons e música.</p>
-        <div class="project-links">
-          <a href="https://battleroyaleoficial.netlify.app" target="_blank">Jogar</a>
+  <section id="formacao" class="section education reveal">
+    <h1 class="section-title reveal">Formação Acadêmica</h1>
+    
+    <div class="education-content">
+      <div class="education-text reveal-left">
+        <p>
+          Em 2024, cursei o módulo básico de <span style="color:#00b7ff; font-weight:bold;">Internet das Coisas</span> no 
+          <span style="color:#00b7ff; font-weight:bold;">Instituto Metrópole Digital (IMD)</span>, onde tive contato com disciplinas fundamentais da área de tecnologia:
+        </p>
+        <ul class="education-list">
+          <li>Introdução às Tecnologias da Informação</li>
+          <li>Inglês Técnico I</li>
+          <li>Sistemas Operacionais</li>
+          <li>Arquitetura de Computadores</li>
+          <li>Matemática Aplicada</li>
+          <li>Lógica de Programação</li>
+        </ul>
+
+        <p>
+          No momento, estou no 2ºAM do ensino médio do colégio <span style="color:#00b7ff; font-weight:bold;">Salesiano Dom Bosco</span>
+        </p>
+      </div>
+
+      <div class="education-image reveal-right">
+        <img src="imd.jpg" alt="Instituto Metrópole Digital" class="edu-img">
+        <img src="sdb.jpg" alt="Salesiano Dom Bosco" class="edu-img">
+      </div>
+    </div>
+  </section>
+
+  <section id="goals" class="section goals reveal">
+    <h1 class="section-title reveal">Meus Objetivos</h1>
+    <div class="goals-content">
+      <div class="goals-images reveal-left">
+        <img src="meme.png" alt="Rafael Ângelo" class="pic-img">
+      </div>
+      <div class="goals-text reveal-right">
+        <p class="goals-p">
+          Meu <span style="color:#00b7ff; font-weight:bold;">principal objetivo</span> é adquirir <span style="color:#00b7ff; font-weight:bold;">experiência na área</span>. No futuro, penso em contribuir para grandes projetos, aprender novas habilidades e me consolidar na área, mas agora me preocupo em ganhar experiência prática trabalhando.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="projects" class="section projects reveal">
+    <h1 class="section-title reveal">Jogue meu Jogo</h1>
+    <div class="projects-grid">
+      <div class="project-card reveal-left">
+        <img src="br01.png" alt="BattleRoyale">
+        <div class="project-info">
+          <h3 class="reveal">Battle Royale</h3>
+          <p class="reveal">Criei um jogo de luta em que cada personagem possui características únicas e habilidades especiais, utilizando C# na Unity. A ideia surgiu em parceria com um amigo, que ficou responsável pela modelagem dos personagens. Este é um dos meus projetos mais completos, pois envolveu a combinação de habilidades de design de personagens, programação, além de integração de sons e música.</p>
+          <div class="project-links reveal">
+            <a href="https://battleroyaleoficial.netlify.app" target="_blank">Jogar</a>
+          </div>
         </div>
       </div>
     </div>
+  </section>
 
-
-    <!-- Adicione mais cards conforme necessário -->
+  <section id="contact" class="section contact reveal">
+  <div class="contact-card">
+    <h1 class="section-title">Contato</h1>
+    <p class="contact-text">Gostou? contate-me.</p>
+    <button id="copy-email" class="contact-btn">rafaelangeloff@gmail.com</button>
   </div>
 </section>
+
+
+  <script>
+    const revealElements = document.querySelectorAll('.reveal, .reveal-left, .reveal-right');
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting) {
+          entry.target.classList.add('active');
+          observer.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.1 });
+
+    revealElements.forEach(el => observer.observe(el));
+
+    const copyBtn = document.getElementById('copy-email');
+const originalText = copyBtn.textContent;
+
+copyBtn.addEventListener('click', () => {
+  navigator.clipboard.writeText(originalText).then(() => {
+    copyBtn.textContent = "Copiado!";
+    copyBtn.classList.add("copied");
+
+    setTimeout(() => {
+      copyBtn.textContent = originalText;
+      copyBtn.classList.remove("copied");
+    }, 1500);
+  });
+});
+
+  </script>
+
 </body>
 </html>
